[Qt][WK2] REGRESSION(r135399): It made qmltests::DoubleTapToZoom::test_double_zoomInAndBack() API test fail https://bugs.webkit.org/show_bug.cgi?id=103889

Reviewed by Jocelyn Turcotte.

The client should always be notified in PageViewportController::didChangeViewportAttributes
about the changed attributes not only if the minimum scale changed. This ensures that these
changes are propagated to QWebKitTest and the zoom stack of double-tap-to-zoom is reset correctly.
Also increase precision of scale comparisons since the current value resulted in flakyness in
scale related API tests.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didChangeViewportAttributes):
(WebKit::PageViewportController::updateMinimumScaleToFit):

Canonical link: https://commits.webkit.org/122250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136668 268f45cc-cd09-0410-ab3c-d52691b4dbfc